<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/xx_sm"
    tools:context=".ui.SignInFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_1"
        android:textStyle="italic|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_2"
        android:textStyle="italic|bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEdtLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_marginTop="@dimen/md"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEdt"
            style="@style/EdtStyle"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/PasswordInputLayoutStyle"
        android:layout_marginTop="@dimen/md">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEdt"
            style="@style/PasswordEdtStyle"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/submitBtnLayout"
        layout="@layout/submit_btn_layout" />

    <TextView
        android:id="@+id/forgotPwdTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_4" />

</LinearLayout>