<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/xx_sm"
    tools:context=".ui.ChangePasswordFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/md"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/primaryColor"
        android:textSize="@dimen/heading_1"
        android:textStyle="italic|bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/PasswordInputLayoutStyle"
        android:layout_marginTop="@dimen/md"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordEdt"
            style="@style/PasswordEdtStyle"
            android:hint="@string/old_pwd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordEdtContainer"
        style="@style/PasswordInputLayoutStyle"
        android:layout_marginTop="@dimen/xx_sm"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEdt"
            style="@style/PasswordEdtStyle"
            android:hint="@string/new_pwd" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmNewPasswordEdtContainer"
        style="@style/PasswordInputLayoutStyle"
        android:layout_marginTop="@dimen/xx_sm"
        app:counterEnabled="true"
        app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmNewPasswordEdt"
            style="@style/PasswordEdtStyle"
            android:hint="@string/confirm_new_pwd" />
    </com.google.android.material.textfield.TextInputLayout>

    <include
        android:id="@+id/submitBtnLayout"
        layout="@layout/submit_btn_layout" />

    <LinearLayout
        android:id="@+id/backTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/md"
            android:layout_height="@dimen/md"
            android:layout_marginEnd="@dimen/xx_sm"
            android:src="@drawable/arrow_back_ic"
            app:tint="@color/primaryColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/heading_4" />
    </LinearLayout>

</LinearLayout>