<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateOrUpdateTopicFragment">

    <include
        android:id="@+id/appBarFragment"
        layout="@layout/fragment_app_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicNameLabel"
        style="@style/TextLabelStyle"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarFragment" />

    <TextView
        style="@style/Obligatory"
        app:layout_constraintBottom_toBottomOf="@id/topicNameLabel"
        app:layout_constraintStart_toEndOf="@id/topicNameLabel"
        app:layout_constraintTop_toTopOf="@id/topicNameLabel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEdtLayout"
        style="@style/TextInputLayoutStyle"
        android:layout_marginHorizontal="@dimen/xx_sm"
        android:layout_marginTop="@dimen/sm"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topicNameLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEdt"
            style="@style/EdtStyle"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="50" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="@dimen/xx_lg"
        android:layout_height="@dimen/xx_lg"
        android:layout_marginTop="@dimen/md"
        android:layout_marginEnd="@dimen/xx_sm"
        android:src="@drawable/image_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEdtLayout" />

    <ImageView
        android:id="@+id/addImage"
        android:layout_width="@dimen/xx_lg"
        android:layout_height="@dimen/xx_lg"
        android:layout_marginStart="@dimen/xx_sm"
        android:layout_marginTop="@dimen/md"
        android:background="@drawable/blue_border_bg"
        android:padding="@dimen/x_sm"
        android:src="@drawable/image_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameEdtLayout" />

    <TextView
        android:id="@+id/clickToAddImageTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/xx_sm"
        android:layout_marginTop="10dp"
        android:text="@string/click_to_add_image"
        android:textColor="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addImage" />

    <TextView
        style="@style/Obligatory"
        app:layout_constraintBottom_toBottomOf="@id/clickToAddImageTxt"
        app:layout_constraintStart_toEndOf="@id/clickToAddImageTxt"
        app:layout_constraintTop_toTopOf="@id/clickToAddImageTxt" />

    <TextView
        android:id="@+id/selectStatusLabel"
        style="@style/TextLabelStyle"
        android:text="@string/select_status"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickToAddImageTxt" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/statusSpinner"
        style="@style/SpinnerStyle"
        android:layout_marginHorizontal="@dimen/xx_sm"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectStatusLabel"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/lg"
        android:layout_marginHorizontal="@dimen/xx_sm"
        android:layout_marginTop="@dimen/md"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="@dimen/x_sm"
        app:layout_constraintTop_toBottomOf="@id/statusSpinner">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/md"
                android:layout_height="@dimen/md"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/xx_sm"
                android:layout_toLeftOf="@id/saveText"
                android:visibility="gone" />

            <TextView
                android:id="@+id/saveText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/heading_3"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>